--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -50,7 +50,6 @@
 @media screen and (max-width: 768px) {
     .header{
         top: initial;
-        bottom: 0;
     }
 
     .nav{
@@ -59,19 +58,20 @@
 
     .nav__menu {
         position: fixed;
-        bottom: -100%;
+        top: -100%;
         left: 0;
+        right: 0;
         width: 100%;
         background-color: var(--body-color);
         padding: 2rem 1.5rem 4rem;
         box-shadow: 0 -1px 4px rgba(0,0,0,0.15);
-        border-radius: 1.5rem 1.5rem 0 0;
+        border-radius: 0 0 1.5rem 1.5rem;
         transition: .3s;
     }
 
     /*Show menu*/
     .show-menu {
-        bottom: 0;
+        top: 0;
     }
 
     .nav__list {
